[tool.poetry]
name = "md_to_conf"
version = "0.1.0"
description = "Markdown to Confluence converter"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
markdown2 = "^2.4.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
